# PTV_WM

./: AGENTS.md  README.md
PTV-Boundary/: .gitignore  Makefile  README.md  pyproject.toml  sitecustomize.py
PTV-Boundary/configs/: base.yaml
PTV-Boundary/configs/ablation/: policy_wm.yaml  rank_wm.yaml  recon_wm.yaml  value_wm.yaml  wout_bic.yaml  wout_edge_sensitivity.yaml  (+3 more)
PTV-Boundary/hydra/: __init__.py
PTV-Boundary/inputs/: README.md
PTV-Boundary/omegaconf/: __init__.py
PTV-Boundary/outputs/: README.md
PTV-Boundary/ralagwm/: __init__.py
PTV-Boundary/src/: __init__.py
PTV-Boundary/testing/: eval_frontier.py  eval_main_benchmark.py  eval_matched_fidelity.py  eval_oracle_substitution.py  eval_robustness.py  run_paper_all.py  run_paper_main.py  run_paper_si.py
PTV-Boundary/tests/: test_audit_consensus.py  test_bic_chart.py  test_configs.py  test_crafter_legacy_api.py  test_crafter_numpy_compat.py  test_discrete_action_selection.py  test_domain_env_config_merge.py  test_dummy_env.py  test_eval_smoke.py  test_geometry_objects.py  test_image_layout_regression.py  test_imports.py  test_numpy_gym_compat.py  test_ralag_object_chain.py  test_ralag_wm_forward.py  test_real_env_factory_fallback.py  test_task_specific_proprio_dims.py  test_train_smoke.py
PTV-Boundary/training/: launch_main_benchmark.py  run_paper_training.py  train_audit.py  train_baseline.py  train_ralag_wm.py
PTV-Criticality/: README.md  RUN_BENCHMARKS.md  RUN_DMC.md  pyproject.toml  requirements.txt
PTV-Criticality/scripts/: run_atari100k_3games.sh  run_dmc_3tasks.sh  run_procgen_3envs.sh
PTV-Regime/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
PTV-Regime/configs/: config.yaml
PTV-Regime/data/: README.md
PTV-Regime/docs/: experiment_matrix.md  final_display_contract.md  method_mapping.md  paper_artifact_manifest.md  reproducibility.md
PTV-Regime/outputs/: README.md
PTV-Regime/scripts/: aggregate_results.py  audit.py  evaluate.py  export_paper_artifacts.py  make_main_figures.py  make_main_tables.py  make_si_figures.py  make_si_tables.py  run_matrix.py  smoke_test.sh  train.py
PTV-Regime/smoke_run/: checkpoint_best.pt  checkpoint_last.pt  config_snapshot.yaml  env.json  metrics.json  per_epoch_metrics.csv
(+394 files in other folders)
