[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rrrm-wm"
version = "0.2.0"
description = "Reference implementation of Resource-Rational Risk Minimization for closed-loop reliable world models"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "OpenAI code refactor for user-provided RRRM manuscript"}]
dependencies = [
  "numpy>=1.23,<3",
  "torch>=2.1",
  "hydra-core>=1.3,<1.4",
  "omegaconf>=2.3,<2.4",
  "tqdm>=4.66",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dmc = ["dm_control>=1.0"]
procgen = ["procgen>=0.10"]
atari = ["gymnasium[atari]>=1.0", "ale-py>=0.10"]
all = ["dm_control>=1.0", "procgen>=0.10", "gymnasium[atari]>=1.0", "ale-py>=0.10"]

[tool.setuptools.packages.find]
where = ["src"]
