[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "licwm"
version = "0.2.0"
description = "Paper-level reproducible PTV-Regime framework"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "omegaconf",
  "hydra-core",
  "pandas",
  "matplotlib",
  "scipy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
